--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-redux": "^9.2.0",
     "react-router-dom": "6",
     "react-scripts": "5.0.1",
+    "sass": "^1.83.4",
     "typescript": "^4.4.2",
     "web-vitals": "^2.1.0"
   },
